--- a/README
+++ b/README
@@ -3,3 +3,4 @@ To install:
   mkdir -p ~/Library/Application\ Support/TextMate/Bundles
   cd ~/Library/Application\ Support/TextMate/Bundles
   git clone git://github.com/macournoyer/Ruby-Supreme.tmbundle.git "Ruby Supreme.tmbundle"
+  osascript -e 'tell app "TextMate" to reload bundles'
